@@ -1,4 +1,5 @@
 RELEASE=`/etc/debian_version|awk '{print $1}'`
+
 export
 
 install:
@@ -7,11 +8,11 @@ install:
 	cp -R ./backup $(SYSTEM_CONF)/proftpd
 	cp ./proftpd.conf $(SYSTEM_CONF)/proftpd
 	# Debian 4.0 "Etch"?
-	if [[ $(RELEASE) == 4.0 ]]; then
-		$(SYSTEM_MAKE_DIRS) $(ROOT_CONF)/proftpd
-		cp ./proftpd.conf $(ROOT_CONF)/proftpd
-	else
-		cp ./proftpd.conf $(ROOT_CONF)
+	if [[ $(RELEASE) == 4.0 ]] ; then \
+		$(SYSTEM_MAKE_DIRS) $(ROOT_CONF)/proftpd \
+		cp ./proftpd.conf $(ROOT_CONF)/proftpd \
+	else \
+		cp ./proftpd.conf $(ROOT_CONF) \
 	fi
 
 uninstall:
