@@ -11,6 +11,10 @@ VHCS 2.4.8 ω Omega Changelog
 |               * gui: disable stats-alias in client menu         |
 \_________________________________________________________________/
 
+2007-03-03 Benedikt Heintel
+	- CONFIGS:
+		* fixed bug #99: fastcgi.conf (and proftpd.conf) are not copied on setup
+
 2007-02-28 Benedikt Heintel
 	- DOCU:
 		* Debian: added greylisting via postgrey in packages
